2000-11-13  John Harper  <jsh@eazel.com>

	* version 0.33.1

2000-11-10  John Harper  <jsh@eazel.com>

	* events.c (current_context_map): new function, replaces the
	variable of the same name (the context map may now change
	depending on the environment, so it's not cachable). If the
	window's ignore-fp-keymap property is set, give a null context
	keymap

2000-11-08  John Harper  <jsh@eazel.com>

	* version 0.33

2000-11-07  John Harper  <jsh@eazel.com>

	* frames.c (set_frame_shapes): fix stupid bug of getting
	dimensions of scaled images wrong (introduced by the last
	change)

2000-11-06  John Harper  <jsh@eazel.com>

	* frames.c (apply_mask): local function to clip a mask (if
	required) before union'ing it onto the destination window

	(set_frame_shapes): use apply_mask () to form the image mask,
	otherwise only images whose dimensions are an integer multiple
	of the tiled image can be created without corrupting the
	surrounding state. Fixes #4519

	* pixmap-cache.c: added code to disable the pixmap cache if
	DISABLE_CACHE preprocessor macro is defined

2000-11-02  John Harper  <jsh@eazel.com>

	* events.c (focus_in, focus_out): pass MODE parameter to
	focus-{in,out}-hook as for leave/enter hooks

2000-10-28  John Harper  <jsh@eazel.com>

	* windows.c (window_input_hint_p): new function
	(focus_on_window, Fwindow_wants_input_p): use
	window_input_hint_p. Fixes the bug where window-wants-input-p
	wasn't checking if the InputHint flag was set before reading
	the value

2000-10-24  John Harper  <jsh@eazel.com>

	* events.c: reverted last change (it breaks some focus stuff),
	instead the leave/enter hooks pass an extra argument: MODE, one
	of the symbols `normal', `grab' or `ungrab', the xcrossing.mode
	field of the event

	* events.c: only call leave-notify-hook or enter-notify-hook
	for NotifyNormal events (i.e. ignore Grab/Ungrab events since
	they don't really represent the pointer crossing window
	boundaries)

2000-10-22  John Harper  <jsh@eazel.com>
